[package]
name = "lua-marshalling"
version = "0.3.0"
edition = "2018"
authors = ["Johan Gardell <736172+gardell@users.noreply.github.com>"]

[dependencies]
libc = "0.2.20"
c-marshalling = { path = "../c-marshalling" }
derive-lua-marshalling = { path = "../derive-lua-marshalling" }
lazy_static = "1"
