[package]
name = "rust-unit"
version = "0.1.0"
authors = ["Johan Gardell <736172+gardell@users.noreply.github.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
libc = "0.2.62"
c-marshalling = { path = "../c-marshalling" }
lua-marshalling = { path = "../lua-marshalling" }

[build-dependencies]
generator = { path = "../generator" }

[lib]
name = "rust_unit"
crate-type = ["cdylib"]
